# housing-data

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  README.md  build_data.sh  build_data_local.sh  build_data_vercel.sh  load_data.sh  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: linter.yml
lib/: BarPlot.js  BarPlot.tsx  CountyPlots.js  CountyPlots.tsx  MetroPlots.js  MetroPlots.tsx  MultiSelect.tsx  PlacePlots.js  PlacePlots.tsx  PlotsTemplate.tsx  StatePlots.js  StatePlots.tsx  WindowSelectSearch.js  WindowSelectSearch.tsx  common_elements.js  common_elements.tsx  data_loader.js  geo_helpers.ts  plots.js  plots.ts  projections.tsx  queries.js  queries.ts  selects.js  selects.tsx  useSelect.js  useSelect.ts  utils.ts
pages/: LineChart.js  _app.js  _app.tsx  _document.tsx  data-sources.js  data-sources.tsx  index.js  index.tsx
pages/counties/: [...county].js  [...county].tsx
pages/metros/: [metro].js  [metro].tsx
pages/places/: [...place].js  [...place].tsx  [...slug].js
pages/rhna/: [city].js  [city].tsx  index.tsx
pages/states/: [state].js  [state].tsx
public/: browserconfig.xml  site.webmanifest
python/: build_data.sh  pyproject.toml
python/housing-data/: Untitled.ipynb  component_0  pyproject.toml  state_annual.json
python/housing-data/housing_data/: build_data.py  building_permits_survey.py  population.py
python/housing-data/tests/: test_housing_data.py
python/housing_data/: build_counties.py  build_data.py  build_data_utils.py  build_metros.py  build_places.py  build_states.py  building_permits_survey.py  california_apr.py  california_hcd_data.py  canada_bper.py  canada_crosswalk.py  canada_population.py  county_population.py  data_loading_helpers.py  fips_crosswalk.py  load_ipums_data.py  make_ipums_data_request.py  place_population.py  population.py  state_population.py
python/tests/: test_housing_data.py
raw_data/: nhgis0006_ds104_1980_place_02398_codebook.txt  nhgis0015_ds104_1980_county.csv  nhgis0015_ds104_1980_place_02398.csv
styles/: Home.module.css  globals.css
