[tool.poetry]
name = "housing-data"
version = "0.1.0"
description = ""
authors = ["Sidharth Kapur <sidharthkapur1@gmail.com>"]

[tool.poetry.dependencies]
# Python 3.9 on vercel because CentOS/yum doesn't have Python 3.10.
# But locally I'm using 3.10 because pandas only released a universal2 (Apple Silicon-compatible)
# wheel for Python 3.10 (and also only for 1.3.5).
python = ">=3.9,<3.11"
pandas = "^1.4.4"
requests = "^2.28.1"
typing-extensions = "^4.3.0"
pyarrow = "^9.0.0"
tqdm = "^4.64.1"
us = "^2.0.2"
xlrd = "^2.0.1"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
jupyterlab = "^3.4.5"
networkx = "^2.8.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build_data = "housing_data.build_data:main"

[tool.autoimport.common_statements]
"np" = "import numpy as np"
"pd" = "import pandas as pd"
