[tool.poetry]
name = "housing-data"
version = "0.1.0"
description = ""
authors = ["Sidharth Kapur <sidharthkapur1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.1.1"
requests = "^2.31.0"
pyarrow = "^13.0.0"
tqdm = "^4.66.0"
us = "^3.1.1"
xlrd = "^2.0.1"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
jupyterlab = "^3.4.5"
networkx = "^2.8.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build_data = "housing_data.build_data:main"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "pandas.*",
  "numpy.*",
  "tqdm.*",
  "us.*",
  "requests.*",
]
ignore_missing_imports = true

[tool.autoimport.common_statements]
"np" = "import numpy as np"
"pd" = "import pandas as pd"
