[project]
name = "housing-data"
version = "0.1.0"
description = ""
readme = ""
requires-python = ">=3.11"
dependencies = [
  "pandas~=2.1.1",
  "requests~=2.31.0",
  "pyarrow~=13.0.0",
  "tqdm~=4.66.0",
  "us~=3.1.1",
  "xlrd~=2.0.1",
  "openpyxl~=3.1.2",
]


[dependency-groups]
dev = [
  "jupyterlab~=3.4.5"
]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "pandas.*",
  "numpy.*",
  "tqdm.*",
  "us.*",
  "requests.*",
]
ignore_missing_imports = true
