[tool.poetry]
name = "housing-data"
version = "0.1.0"
description = ""
authors = ["Sidharth Kapur <sidharth.kapur@affirm.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
requests = "^2.25.0"
typing-extensions = "^3.7.4"
pyarrow = "^2.0.0"
tqdm = "^4.54.0"
us = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^2.2.9"
networkx = "^2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build_data = "housing_data.build_data:main"
